# my_chatroom

./: README.md  depends.sh
chat_server/: CMakeLists.txt
chat_server/source/: server.cc
client/: CMakeLists.txt  client.conf  compose.yaml  dockerfile
client/source/: client.hpp  test.cc
common/: chat.hpp  conn.hpp  data_redis.hpp  email_send.hpp  file.hpp  logger.cc  logger.h  main.hpp  message_cache.cc  message_cache.h  mysql.cc  mysql.h  mysql_apply.hpp  mysql_chat_session.hpp  mysql_chat_session_member.hpp  mysql_file.hpp  mysql_message.hpp  mysql_relation.hpp  mysql_user.hpp  thread_pool.hpp  utils.cc  utils.h  verification_code_send.cc  verification_code_send.h
conf/: chat.conf  client.conf  file.conf
file_server/: CMakeLists.txt
file_server/source/: server.cc
key/: ca.crt  ca.key  cert.csr  cert.pem  key.pem  server.crt  server.csr  server.key
muduo/: Acceptor.cc  Acceptor.h  Buffer.cc  Buffer.h  Channel.cc  Channel.h  Connection.cc  Connection.h  EventLoop.cc  EventLoop.h  LoopThreadPool.cc  LoopThreadPool.h  Poller.cc  Poller.h  Socket.cc  Socket.h  TcpServer.cc  TcpServer.h
odb/: chat_session.hxx  chat_session_member.hxx  file.hxx  friend_apply.hxx  message.hxx  relation.hxx  session_apply.hxx  user.hxx
proto/: chat.proto  file.proto
server/: CMakeLists.txt
server/source/: server.cc
sql/: chat_session.sql  chat_session_member.sql  file.sql  friend_apply.sql  message.sql  relation.sql  session_apply.sql  user.sql
